sbi-manifests/sbi-cms-user-management-extn/sbi-cms/templates/deployment.yaml
---
# Source: sbi-cms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbi-cms-user-management-extn
  namespace: sbi
  labels:
    app: sbi-cms-user-management-extn
    intent: apps
spec:
  selector:
    matchLabels:
      app: sbi-cms-user-management-extn
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sbi-cms-user-management-extn
        intent: apps
      annotations:
        kubernetes.io/psp: eks.privileged
        "fss.com/app-configmap-hash": 589ecda415bd40124d0383a7f9f5726426050f27eac2b2ff25e4f82e61a40ad5
    spec:
      volumes:
      containers:
        - name: sbi-cms-user-management-extn
          image: 736483234466.dkr.ecr.ap-south-1.amazonaws.com/sbi-cms-user-management-extn:sbi-uat.v47
          volumeMounts:
          ports:
            - containerPort: 7071
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      nodeSelector:
        app: sbi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
